--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Task List 2022</h1>
-        <form id="new-task-form">
+        <form id="new-task-form" onsubmit="return false">
             <input type="text"
              id="new-task-input" 
              placeholder="What do you have planned?">
@@ -23,21 +23,7 @@
    <main>
     <section class="task-list">
         <h2>Tasks</h2>
-       <div id="tasks">
-        <!-- <div class="task">
-            <div class="content">
-                <input 
-                type="text"
-                class="text"
-                value="My shiny task"
-                readonly
-                >
-            </div>
-            <div class="actions">
-                <button class="edit">Edit</button>
-                <button class="delete">Delete</button>
-            </div>
-        </div> -->
+       
         
      </div>
     </section>
